--- a/src/styles/components/_searchBar.scss
+++ b/src/styles/components/_searchBar.scss
@@ -94,7 +94,7 @@
         box-sizing: border-box;
     }
     .blur-bg{
-        background-color: color-mix(in srgb, white, transparent 100%);
+        background-color: #FFFFFF00;
         backdrop-filter: blur(10px);
         z-index: -1;
     }
